unpackaged/main/default/objects/Case/fields/Business_Changes_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Business_Changes_Improvements__c</fullName>
    <description>To be exported and added to release notes that go our to all users, if this is an Enhancement Ticket</description>
    <inlineHelpText>Text needs to be entered if this is an enhancement ticket.</inlineHelpText>
    <label>Business Changes/Improvements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>