unpackaged/main/default/objects/Case/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <description>Campus where incident happened for a Case. This picklist drives case user assignment.</description>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kendall</fullName>
            </value>
            <value>
                <fullName>Padron</fullName>
            </value>
            <value>
                <fullName>Wolfson</fullName>
            </value>
            <value>
                <fullName>North/Meek</fullName>
            </value>
            <value>
                <fullName>Hialeah</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Homestead</fullName>
            </value>
            <value>
                <fullName>Other/District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>