unpackaged/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>8/7/23 Used by users in order to close a case</description>
    <inlineHelpText>Please select why the case is being closed.</inlineHelpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>External Solution</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>Product Enhancement</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>