unpackaged/main/default/objects/Case/fields/Closed_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason_Description__c</fullName>
    <description>Whenever the value &#39;Other&#39; is selected on the field Closed Reason, this field needs to be entered.</description>
    <inlineHelpText>Please describe further the reason of why this case is being closed.</inlineHelpText>
    <label>Closed Reason Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>