unpackaged/main/default/objects/Case/fields/Date_of_Occurence__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Occurence__c</fullName>
    <description>The date when the behavior event that triggered the Case occurred.</description>
    <inlineHelpText>The date when the behavior event that triggered the Case occurred.</inlineHelpText>
    <label>Date of Occurence</label>
    <type>Date</type>
</CustomField>