unpackaged/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Field Used in the Ticketing system to be used for whenever a CRM Team Task Type of Case is submitted. Only viewed by admins in the Case Admin Page Layout.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>