unpackaged/main/default/objects/Case/fields/Functional_Testing_Required__c.field-meta.xml
<CustomField>
    <fullName>Functional_Testing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Enhancement tickets, if there is functional testing that needs to be required, this checkbox must be checked</description>
    <label>Functional Testing Required</label>
    <type>Checkbox</type>
</CustomField>