unpackaged/main/default/objects/Case/fields/Hot_Fix__c.field-meta.xml
<CustomField>
    <fullName>Hot_Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this ticket released as a hot fix?</description>
    <inlineHelpText>Was this ticket released as a hot fix?</inlineHelpText>
    <label>Hot Fix</label>
    <type>Checkbox</type>
</CustomField>