unpackaged/main/default/objects/Case/fields/Internal_Phone__c.field-meta.xml
<CustomField>
    <fullName>Internal_Phone__c</fullName>
    <description>To be used for BT Conversation Component</description>
    <label>Internal Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>