unpackaged/main/default/objects/Case/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Used to know in which type of product inside the Salesforce Organization the user is having trouble.</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blackthorn Events</fullName>
            </value>
            <value>
                <fullName>Blackthorn Messaging</fullName>
            </value>
            <value>
                <fullName>Reports/Dashboards</fullName>
            </value>
            <value>
                <fullName>MDC Recruitment App</fullName>
            </value>
            <value>
                <fullName>Backend</fullName>
            </value>
            <value>
                <fullName>Account Engagement</fullName>
                <label>Account Engagement (Pardot)</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other/Don&#39;t know</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>