unpackaged/main/default/objects/Case/fields/Related_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Related_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Attendee record to this Case</description>
    <inlineHelpText>The Attendee related to this Case.</inlineHelpText>
    <label>Related Attendee</label>
    <referenceTo>conference360__Attendee__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>