unpackaged/main/default/objects/Case/fields/Related_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Related_Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The conversation related to this Case.</description>
    <inlineHelpText>The conversation related to this Case.</inlineHelpText>
    <label>Related Conversation</label>
    <referenceTo>simplesms__Conversation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>