unpackaged/main/default/objects/Case/fields/Related_Event__c.field-meta.xml
<CustomField>
    <fullName>Related_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related event associated with New Event Campaign ticket type.</description>
    <inlineHelpText>Event associated with this ticket.</inlineHelpText>
    <label>Related Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>