unpackaged/main/default/objects/Case/fields/Resources_Links__c.field-meta.xml
<CustomField>
    <fullName>Resources_Links__c</fullName>
    <description>Field utilized to direct users for the right training materials if the case requires it</description>
    <inlineHelpText>Useful links for the resolution of this case</inlineHelpText>
    <label>Resources/Links</label>
    <type>Url</type>
</CustomField>