unpackaged/main/default/objects/Case/fields/Scheduled_for_Release__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_for_Release__c</fullName>
    <description>If this is an enhancement ticket, this field is selected to filter when this enhancement will be released into the Production Environment.</description>
    <label>Scheduled for Release</label>
    <type>Date</type>
</CustomField>