unpackaged/main/default/objects/Case/fields/Targeted_Release__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Release__c</fullName>
    <description>Target Release Date</description>
    <inlineHelpText>Tentative release date for the ticket.</inlineHelpText>
    <label>Targeted Release</label>
    <type>Date</type>
</CustomField>