unpackaged/main/default/objects/Case/fields/Technical_Changes_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Technical_Changes_Improvements__c</fullName>
    <description>Field utilized for enhancement type of tickets.</description>
    <label>Technical Changes/Improvements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>