unpackaged/main/default/objects/Case/fields/Ticket_Priority__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Priority__c</fullName>
    <description>The priority of this ticket for the current backlog, 1 is the highest priority.</description>
    <inlineHelpText>The priority of this ticket for the current backlog, 1 is the highest priority.</inlineHelpText>
    <label>Ticket Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>