unpackaged/main/default/objects/Case/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If functional testing is required, this lookup needs to be selected if internal CRM team is not used to test functionality.</description>
    <label>Functional Testing Completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>