unpackaged/main/default/objects/Case/recordTypes/General_Ticket.recordType-meta.xml
<RecordType>
    <fullName>General_Ticket</fullName>
    <active>true</active>
    <businessProcess>MDC General Tickets</businessProcess>
    <description>Record Type used for general ticketing system</description>
    <label>General Ticket</label>
</RecordType>