unpackaged/main/default/objects/Case/recordTypes/Info_Center_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Info_Center_Ticket</fullName>
    <active>true</active>
    <businessProcess>Info Center Tickets</businessProcess>
    <description>Record Type used for Info Center tickets</description>
    <label>Info Center Ticket</label>
</RecordType>