unpackaged/main/default/objects/Case/validationRules/Case_Reason_for_Closed_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Reason_for_Closed_Cases</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status,&#39;Closed&#39;),
    OR(
        ISPICKVAL(Closed_Reason__c,&quot;&quot;),
        ISBLANK(Closed_Reason_Description__c)
        )
)</errorConditionFormula>
    <errorMessage>You cannot set Status to Closed without entering a Closed Reason with a Closed Reason Description.</errorMessage>
</ValidationRule>