unpackaged/main/default/objects/Case/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Ticket_Priority__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Business_Changes_Improvements__c</columns>
    <columns>Technical_Changes_Improvements__c</columns>
    <columns>Targeted_Release__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.General_Ticket</value>
    </filters>
    <label>ALL</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>