unpackaged/main/default/objects/Case/listViews/Backlog.listView-meta.xml
<ListView>
    <fullName>Backlog</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Business_Changes_Improvements__c</columns>
    <columns>Technical_Changes_Improvements__c</columns>
    <columns>Targeted_Release__c</columns>
    <columns>Scheduled_for_Release__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.General_Ticket</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Escalated</value>
    </filters>
    <label>Backlog</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>