unpackaged/main/default/objects/Case/listViews/Development_Sprint_Tickets.listView-meta.xml
<ListView>
    <fullName>Development_Sprint_Tickets</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.TYPE</columns>
    <columns>Ticket_Priority__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Due_Date__c</columns>
    <columns>Business_Changes_Improvements__c</columns>
    <columns>Technical_Changes_Improvements__c</columns>
    <columns>Targeted_Release__c</columns>
    <columns>Scheduled_for_Release__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.General_Ticket</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Escalated,Closed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Shankar</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Development Sprint Tickets</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>