unpackaged/main/default/objects/Case/listViews/Event_Campaign_Requests.listView-meta.xml
<ListView>
    <fullName>Event_Campaign_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>New Event Campaign</value>
    </filters>
    <label>Event Campaign Requests</label>
</ListView>