unpackaged/main/default/objects/Case/listViews/General_Backlog_not_escalated.listView-meta.xml
<ListView>
    <fullName>General_Backlog_not_escalated</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.TYPE</columns>
    <columns>Ticket_Priority__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Due_Date__c</columns>
    <columns>Business_Changes_Improvements__c</columns>
    <columns>Technical_Changes_Improvements__c</columns>
    <columns>Targeted_Release__c</columns>
    <columns>Scheduled_for_Release__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.General_Ticket</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>Operational Sprint,Shankar Sprint</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>phase 1.2</value>
    </filters>
    <label>General Backlog- not escalated</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
        <group>CRM_with_Ann</group>
    </sharedTo>
</ListView>