unpackaged/main/default/objects/Case/listViews/General_Case.listView-meta.xml
<ListView>
    <fullName>General_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>General</label>
    <queue>General</queue>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>