unpackaged/main/default/objects/Case/listViews/Info_Center_Tickets.listView-meta.xml
<ListView>
    <fullName>Info_Center_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Info_Center_Ticket</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Info Center Tickets</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
        <group>Info_Center</group>
    </sharedTo>
</ListView>