unpackaged/main/default/objects/Case/listViews/New_User_Requests.listView-meta.xml
<ListView>
    <fullName>New_User_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>New User</value>
    </filters>
    <label>New User Requests</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>