unpackaged/main/default/objects/Case/listViews/Operational_Backlog.listView-meta.xml
<ListView>
    <fullName>Operational_Backlog</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Ticket_Priority__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Due_Date__c</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Targeted_Release__c</columns>
    <columns>Scheduled_for_Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.General_Ticket</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Operational Sprint</value>
    </filters>
    <label>Operational Backlog</label>
    <sharedTo>
        <group>CRM_with_Ann</group>
    </sharedTo>
</ListView>